<resources>
    <string name="app_name">Todo</string>
    <string name="todo_default_title">title</string>
    <string name="todo_title_label">Title</string>
    <string name="todo_title_hint">type title..</string>
    <string name="todo_description_label">Description</string>
    <string name="todo_description_hint">type description..</string>
    <string name="todo_button_confirm">Ok</string>
    <string name="todo_button_cancel">Cancel</string>
    <string name="todo_edit_title">Todo Edit</string>
    <string name="todo_button_close">Close</string>
    <string name="todo_button_load">Load</string>
    <string name="todo_button_new">New</string>
    <string name="todo_button_rename">Rename</string>
    <string name="todo_button_delete">Delete</string>
    <string name="todo_button_quit">Quit</string>
    <string name="todo_group_label">Todo Group Name</string>
    <string name="todo_group_name_hint">type name..</string>
</resources>